small docs update

--- a/docs/sphinx/_static/custom_material.css
+++ b/docs/sphinx/_static/custom_material.css
@@ -1,3 +1,8 @@
+.md-typeset .admonition,
+.md-typeset details {
+  font-size: 0.75rem;
+}
+
 .md-typeset .admonition.tip>.admonition-title::before,
 .md-typeset .admonition.hint>.admonition-title::before {
   mask-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" /></svg>');
