--- a/search/search.css
+++ b/search/search.css
@@ -1,18 +1,13 @@
-/*---------------- Search Box */
+/*---------------- Search Box positioning */
 
-.titlearea table {
-    width: 100%;
-}
-
-dark-mode-toggle {
-    position: absolute;
-    right: 5px;
-    padding-top: 3px;
-}
-
-#MSearchBox {
-    position: absolute;
-    right: 34px;
+#navrow1 .tablist > li:last-child {
+    /* This <li> object is the parent of the search bar */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+    margin-right: 1em;
+    float: right;
 }
 
 /*---------------- Search box styling */
